# Filght-Booking-Sysyem

./: .env.example  .gitignore  README.md  build_files.sh  pyproject.toml  requirements.txt  setup.py  vercel.json
Filght-Booking-Sysyem-main/: build.sh  pyproject.toml  setup.py  vercel.json
Filght-Booking-Sysyem-main/data/: flight_auth_group.sql  flight_auth_group_permissions.sql  flight_auth_permission.sql  flight_auth_user.sql  flight_auth_user_groups.sql  flight_auth_user_user_permissions.sql  flight_django_admin_log.sql  flight_django_content_type.sql  flight_django_migrations.sql  flight_django_session.sql  flight_home_airline.sql  flight_home_airport.sql  flight_home_booking.sql  flight_home_contact.sql  flight_home_flight.sql  flight_home_passenger.sql  flight_home_payment.sql
Filght-Booking-Sysyem-main/myproject/: .env.example  .gitignore  requirements.txt  test_pricing.py  vercel.json
Filght-Booking-Sysyem-main/myproject/home/: admin.py  models.py  url.py  urls.py  views.py
Filght-Booking-Sysyem-main/myproject/home/migrations/: 0001_initial.py  0002_contact_date_alter_contact_message.py  0003_rename_name_contact_name1.py  0004_rename_name1_contact_name.py  0005_airline_airport_flight_booking_passenger_payment.py  (+15 more)
Filght-Booking-Sysyem-main/myproject/myproject/: settings.py  urls.py
Filght-Booking-Sysyem-main/myproject/templates/: about.html  base.html  book.html  booking_detail.html  cancel_confirm.html  contact.html  index.html  login.html  my_bookings.html  payment.html  profile.html  register.html  search.html  search_results.html  services.html
(+96 files in other folders)
