[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "filght-booking-system"
version = "1.0.0"
description = "Flight Booking System Django Application"
requires-python = ">=3.12"
dependencies = [
    "Django==5.1.7",
    "mysqlclient==2.2.0",
    "stripe==9.13.0",
    "python-decouple==3.8",
    "whitenoise==6.6.0",
    "gunicorn==21.2.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
]

[tool.setuptools]
packages = ["myproject", "home"]
